[package]
name = "image_gen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.11.0", features = ["full"] }
lamedh_http = "0.3.0"
og_image_writer = { git = "https://github.com/keiya01/og_image_writer", branch = "main" }
base64 = "0.13.0"
